// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PodDetails should match snapshot with container based pod and with multiple containers 1`] = `
<body>
  <div>
    <div
      class="dark relative flex flex-col gap-y-3 overflow-hidden pb-4 pl-4 pr-20 pt-3"
    >
      <div
        class="absolute left-[23.5px] top-8 h-[calc(100%-48px)] w-[1px] gap-2 bg-neutral-300"
      />
      <a
        class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-brand-500 text-xs h-7 px-2 rounded border border-neutral-250 dark:border-neutral-400 text-neutral-400 dark:text-white hover:[&:not(:active)]:border-neutral-300 dark:hover:[&:not(:active):not(:disabled)]:border-neutral-350 active:bg-neutral-150 disabled:text-neutral-300 disabled:bg-neutral-100 disabled:border-none bg-neutral-100 dark:bg-neutral-500 hover:[&:not(:active):not(:disabled)]:bg-white dark:hover:[&:not(:active):not(:disabled)]:bg-neutral-400 absolute right-2 top-2 gap-2"
        href="/organization//project//environment//logs/1/service-logs"
        type="button"
      >
        Logs
        <i
          aria-hidden="true"
          class="fa-solid fa-scroll "
        />
      </a>
      <div
        data-orientation="horizontal"
        dir="ltr"
      >
        <div
          aria-orientation="horizontal"
          class="flex gap-1 overflow-x-auto whitespace-nowrap"
          data-orientation="horizontal"
          role="tablist"
          style="outline: none;"
          tabindex="0"
        >
          <button
            aria-controls="radix-:rm:-content-pod-container-1"
            aria-selected="true"
            class="relative flex items-center justify-center shrink-0 select-none box-border hover:text-brand-500 hover:border-brand-500 border-neutral-250 dark:border-neutral-350 data-[state=active]:border-brand-500 dark:data-[state=active]:border-brand-500 data-[state=active]:text-brand-500 dark:data-[state=active]:text-white dark:hover:text-white disabled:border-neutral-200 disabled:text-neutral-300 dark:disabled:border-neutral-400 dark:disabled:text-neutral-350 transition text-neutral-350 dark:text-neutral-300 rounded-full text-2xs px-2 h-5 font-semibold border"
            data-orientation="horizontal"
            data-radix-collection-item=""
            data-state="active"
            id="radix-:rm:-trigger-pod-container-1"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <div
              class="mr-1 h-1.5 w-1.5 rounded-full bg-green-500"
            />
            pod-container-1
          </button>
          <button
            aria-controls="radix-:rm:-content-pod-container-2"
            aria-selected="false"
            class="relative flex items-center justify-center shrink-0 select-none box-border hover:text-brand-500 hover:border-brand-500 border-neutral-250 dark:border-neutral-350 data-[state=active]:border-brand-500 dark:data-[state=active]:border-brand-500 data-[state=active]:text-brand-500 dark:data-[state=active]:text-white dark:hover:text-white disabled:border-neutral-200 disabled:text-neutral-300 dark:disabled:border-neutral-400 dark:disabled:text-neutral-350 transition text-neutral-350 dark:text-neutral-300 rounded-full text-2xs px-2 h-5 font-semibold border"
            data-orientation="horizontal"
            data-radix-collection-item=""
            data-state="inactive"
            id="radix-:rm:-trigger-pod-container-2"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <div
              class="mr-1 h-1.5 w-1.5 rounded-full bg-red-500"
            />
            pod-container-2
          </button>
        </div>
        <div
          class="mt-3"
        >
          <div
            aria-labelledby="radix-:rm:-trigger-pod-container-1"
            class="relative outline-0"
            data-orientation="horizontal"
            data-state="active"
            id="radix-:rm:-content-pod-container-1"
            role="tabpanel"
            style="animation-duration: 0s;"
            tabindex="0"
          >
            <dl
              class="grid gap-2 grid-cols-[20px_100px_minmax(0,_1fr)] gap-x-2 gap-y-0"
            >
              <dt
                class="text-neutral-350 dark:text-neutral-300 col-span-2 mb-2"
              >
                Container image:
              </dt>
              <dd
                class="font-medium text-neutral-400 dark:font-normal dark:text-white mb-2 flex gap-1"
              >
                foobar-img
              </dd>
              <span
                class="relative top-[1px] z-0 inline-flex h-4 w-4 items-center justify-center bg-neutral-700 before:block before:h-1.5 before:w-1.5 before:rounded-full before:bg-neutral-300"
              />
              <dt
                class="text-neutral-350 dark:text-neutral-300"
              >
                Current status:
              </dt>
              <dd
                class="font-medium text-neutral-400 dark:font-normal dark:text-white"
              >
                <span>
                  <span
                    aria-label="Checkmark"
                    role="img"
                  >
                    ✅
                  </span>
                   
                  Running
                </span>
              </dd>
            </dl>
          </div>
          <div
            aria-labelledby="radix-:rm:-trigger-pod-container-2"
            class="relative outline-0"
            data-orientation="horizontal"
            data-state="inactive"
            hidden=""
            id="radix-:rm:-content-pod-container-2"
            role="tabpanel"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`PodDetails should match snapshot with git based pod and with last_terminated_state 1`] = `
<body>
  <div>
    <div
      class="dark relative flex flex-col gap-y-3 overflow-hidden pb-4 pl-4 pr-20 pt-3"
    >
      <div
        class="absolute left-[23.5px] top-8 h-[calc(100%-48px)] w-[1px] gap-2 bg-neutral-300"
      />
      <a
        class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-brand-500 text-xs h-7 px-2 rounded border border-neutral-250 dark:border-neutral-400 text-neutral-400 dark:text-white hover:[&:not(:active)]:border-neutral-300 dark:hover:[&:not(:active):not(:disabled)]:border-neutral-350 active:bg-neutral-150 disabled:text-neutral-300 disabled:bg-neutral-100 disabled:border-none bg-neutral-100 dark:bg-neutral-500 hover:[&:not(:active):not(:disabled)]:bg-white dark:hover:[&:not(:active):not(:disabled)]:bg-neutral-400 absolute right-2 top-2 gap-2"
        href="/organization//project//environment//logs/1/service-logs"
        type="button"
      >
        Logs
        <i
          aria-hidden="true"
          class="fa-solid fa-scroll "
        />
      </a>
      <div
        data-orientation="horizontal"
        dir="ltr"
      >
        <div
          aria-orientation="horizontal"
          class="gap-1 overflow-x-auto whitespace-nowrap hidden"
          data-orientation="horizontal"
          role="tablist"
          style="outline: none;"
          tabindex="0"
        >
          <button
            aria-controls="radix-:re:-content-pod-container-1"
            aria-selected="true"
            class="relative flex items-center justify-center shrink-0 select-none box-border hover:text-brand-500 hover:border-brand-500 border-neutral-250 dark:border-neutral-350 data-[state=active]:border-brand-500 dark:data-[state=active]:border-brand-500 data-[state=active]:text-brand-500 dark:data-[state=active]:text-white dark:hover:text-white disabled:border-neutral-200 disabled:text-neutral-300 dark:disabled:border-neutral-400 dark:disabled:text-neutral-350 transition text-neutral-350 dark:text-neutral-300 rounded-full text-2xs px-2 h-5 font-semibold border"
            data-orientation="horizontal"
            data-radix-collection-item=""
            data-state="active"
            id="radix-:re:-trigger-pod-container-1"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <div
              class="mr-1 h-1.5 w-1.5 rounded-full bg-green-500"
            />
            pod-container-1
          </button>
        </div>
        <div
          class="mt-3"
        >
          <div
            aria-labelledby="radix-:re:-trigger-pod-container-1"
            class="relative outline-0"
            data-orientation="horizontal"
            data-state="active"
            id="radix-:re:-content-pod-container-1"
            role="tabpanel"
            style="animation-duration: 0s;"
            tabindex="0"
          >
            <dl
              class="grid gap-2 grid-cols-[20px_100px_minmax(0,_1fr)] gap-x-2 gap-y-0"
            >
              <span
                class="relative top-[1px] z-0 inline-flex h-4 w-4 items-center justify-center bg-neutral-700 before:block before:h-1.5 before:w-1.5 before:rounded-full before:bg-neutral-300"
              />
              <dt
                class="text-neutral-350 dark:text-neutral-300 mb-2"
              >
                Current status:
              </dt>
              <dd
                class="font-medium text-neutral-400 dark:font-normal dark:text-white mb-2"
              >
                <span>
                  <span
                    aria-label="Checkmark"
                    role="img"
                  >
                    ✅
                  </span>
                   
                  Running
                </span>
              </dd>
              <span
                class="relative top-[1px] z-0 inline-flex h-4 w-4 items-center justify-center bg-neutral-700 before:block before:h-1.5 before:w-1.5 before:rounded-full before:bg-neutral-300"
              />
              <dt
                class="text-neutral-350 dark:text-neutral-300 mb-2"
              >
                State reason:
              </dt>
              <dd
                class="font-medium text-neutral-400 dark:font-normal dark:text-white mb-2"
              >
                Baz reason
              </dd>
              <span
                class="relative top-[1px] z-0 inline-flex h-4 w-4 items-center justify-center bg-neutral-700 before:block before:h-1.5 before:w-1.5 before:rounded-full before:bg-neutral-300"
              />
              <dt
                class="text-neutral-350 dark:text-neutral-300 mb-2"
              >
                State message:
              </dt>
              <dd
                class="font-medium text-neutral-400 dark:font-normal dark:text-white"
              >
                Baz
                 (
                1
                ).
                 
                If you want to clear this warning state, redeploy the service.
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`PodDetails should match snapshot with git based pod and without last_terminated_state 1`] = `
<body>
  <div>
    <div
      class="dark relative flex flex-col gap-y-3 overflow-hidden pb-4 pl-4 pr-20 pt-3"
    >
      <div
        class="absolute left-[23.5px] top-8 h-[calc(100%-48px)] w-[1px] gap-2 bg-neutral-300"
      />
      <a
        class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-brand-500 text-xs h-7 px-2 rounded border border-neutral-250 dark:border-neutral-400 text-neutral-400 dark:text-white hover:[&:not(:active)]:border-neutral-300 dark:hover:[&:not(:active):not(:disabled)]:border-neutral-350 active:bg-neutral-150 disabled:text-neutral-300 disabled:bg-neutral-100 disabled:border-none bg-neutral-100 dark:bg-neutral-500 hover:[&:not(:active):not(:disabled)]:bg-white dark:hover:[&:not(:active):not(:disabled)]:bg-neutral-400 absolute right-2 top-2 gap-2"
        href="/organization//project//environment//logs/1/service-logs"
        type="button"
      >
        Logs
        <i
          aria-hidden="true"
          class="fa-solid fa-scroll "
        />
      </a>
      <div
        data-orientation="horizontal"
        dir="ltr"
      >
        <div
          aria-orientation="horizontal"
          class="gap-1 overflow-x-auto whitespace-nowrap hidden"
          data-orientation="horizontal"
          role="tablist"
          style="outline: none;"
          tabindex="0"
        >
          <button
            aria-controls="radix-:r6:-content-pod-container-1"
            aria-selected="true"
            class="relative flex items-center justify-center shrink-0 select-none box-border hover:text-brand-500 hover:border-brand-500 border-neutral-250 dark:border-neutral-350 data-[state=active]:border-brand-500 dark:data-[state=active]:border-brand-500 data-[state=active]:text-brand-500 dark:data-[state=active]:text-white dark:hover:text-white disabled:border-neutral-200 disabled:text-neutral-300 dark:disabled:border-neutral-400 dark:disabled:text-neutral-350 transition text-neutral-350 dark:text-neutral-300 rounded-full text-2xs px-2 h-5 font-semibold border"
            data-orientation="horizontal"
            data-radix-collection-item=""
            data-state="active"
            id="radix-:r6:-trigger-pod-container-1"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <div
              class="mr-1 h-1.5 w-1.5 rounded-full bg-green-500"
            />
            pod-container-1
          </button>
        </div>
        <div
          class="mt-3"
        >
          <div
            aria-labelledby="radix-:r6:-trigger-pod-container-1"
            class="relative outline-0"
            data-orientation="horizontal"
            data-state="active"
            id="radix-:r6:-content-pod-container-1"
            role="tabpanel"
            style="animation-duration: 0s;"
            tabindex="0"
          >
            <dl
              class="grid gap-2 grid-cols-[20px_100px_minmax(0,_1fr)] gap-x-2 gap-y-0"
            >
              <span
                class="relative top-[1px] z-0 inline-flex h-4 w-4 items-center justify-center bg-neutral-700 before:block before:h-1.5 before:w-1.5 before:rounded-full before:bg-neutral-300"
              />
              <dt
                class="text-neutral-350 dark:text-neutral-300"
              >
                Current status:
              </dt>
              <dd
                class="font-medium text-neutral-400 dark:font-normal dark:text-white"
              >
                <span>
                  <span
                    aria-label="Checkmark"
                    role="img"
                  >
                    ✅
                  </span>
                   
                  Running
                </span>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`PodDetails should match snapshot with pod error with 0 containers 1`] = `
<body>
  <div>
    <div
      class="dark relative flex flex-col gap-y-3 overflow-hidden pb-4 pl-4 pr-20 pt-3"
    >
      <div
        class="absolute left-[23.5px] top-8 h-[calc(100%-48px)] w-[1px] gap-2 bg-neutral-300"
      />
      <a
        class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-brand-500 text-xs h-7 px-2 rounded border border-neutral-250 dark:border-neutral-400 text-neutral-400 dark:text-white hover:[&:not(:active)]:border-neutral-300 dark:hover:[&:not(:active):not(:disabled)]:border-neutral-350 active:bg-neutral-150 disabled:text-neutral-300 disabled:bg-neutral-100 disabled:border-none bg-neutral-100 dark:bg-neutral-500 hover:[&:not(:active):not(:disabled)]:bg-white dark:hover:[&:not(:active):not(:disabled)]:bg-neutral-400 absolute right-2 top-2 gap-2"
        href="/organization//project//environment//logs/1/service-logs?pod_name=app-z0fb41d62-5c7fdb6f5f-44wpd"
        type="button"
      >
        Logs
        <i
          aria-hidden="true"
          class="fa-solid fa-scroll "
        />
      </a>
      <dl
        class="grid gap-2 grid-cols-[20px_100px_minmax(0,_1fr)] gap-x-2 gap-y-0"
      >
        <span
          class="relative top-[1px] z-0 inline-flex h-4 w-4 items-center justify-center bg-neutral-700 before:block before:h-1.5 before:w-1.5 before:rounded-full before:bg-neutral-300"
        />
        <dt
          class="text-neutral-350 dark:text-neutral-300"
        >
          Current status:
        </dt>
        <dd
          class="font-medium text-neutral-400 dark:font-normal dark:text-white"
        >
          <span
            class="flex gap-1.5"
          >
            <span
              aria-label="Error"
              role="img"
            >
              ❌
            </span>
            <span>
              Evicted
              :Pod was rejected: The node had condition: [DiskPressure]. 
            </span>
          </span>
        </dd>
      </dl>
    </div>
  </div>
</body>
`;
